[workspace]
members = [
    # Reth stateless validator
    "stateless-validator/reth/guest",
    "stateless-validator/reth/airbender",
    "stateless-validator/reth/openvm",
    "stateless-validator/reth/pico",
    "stateless-validator/reth/risc0",
    "stateless-validator/reth/sp1",
    "stateless-validator/reth/zisk",

    # Ethrex stateless validator is not part of the workspace
    "stateless-validator/ethrex/guest",

    # Libs
    "guest-libs",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"


[workspace.dependencies]
# local dependencies
guest-libs = { path = "guest-libs", default-features = false }
reth-guest = { path = "stateless-validator/reth/guest", default-features = false }
ethrex-guest = { path = "stateless-validator/ethrex/guest", default-features = false }
block-encoding-length-guest = { path = "block-encoding-length/guest", default-features = false }

# ere
ere-io = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-trait = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c" }
ere-platform-airbender = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-openvm = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-pico = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-risc0 = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-sp1 = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }
ere-platform-zisk = { git = "https://github.com/eth-applied-research-group/ere", rev = "6266b242edad2d315b753155a6538ea900be2b9c", default-features = false }

# openvm
openvm = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1" }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-sha2 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-keccak256 = { git = "https://github.com/openvm-org/openvm.git", tag = "v1.4.1", default-features = false }
openvm-revm-crypto = { git = "https://github.com/axiom-crypto/openvm-reth-benchmark.git", branch = "openvm-v1.4.1-reth-1.8.3", default-features = false }

reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }
reth-trie-common = { git = "https://github.com/paradigmxyz/reth", rev = "cfde951976bfa9100a6d9f806e06fb539ae25241", default-features = false }

# alloy
alloy-primitives = { version = "1.4.1", default-features = false }
alloy-consensus = { version = "1.1.2", default-features = false }
alloy-eips = { version = "1.1.2", default-features = false }
alloy-hardforks = { version = "0.4.5", default-features = false }
alloy-chains = { version = "0.2.5", default-features = false }
alloy-rlp = { version = "0.3.10", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false }

# revm
revm = { version = "33.1.0", default-features = false }
revm-bytecode = { version = "7.1.1", default-features = false }

# ethrex
ethrex-guest-program = { git = "https://github.com/lambdaclass/ethrex.git", rev = "c68e76d6b569c60a667a1240a91e637bf2ea0d0b", package = "guest_program" }
ethrex-common = { git = "https://github.com/lambdaclass/ethrex.git", rev = "c68e76d6b569c60a667a1240a91e637bf2ea0d0b", default-features = false }

# misc
bincode = "1.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sha2 = { version = "0.10.9", default-features = false }
serde = { version = "1.0", default-features = false }
serde_json = { version = "*", default-features = false }
serde_with = { version = "3", default-features = false }
thiserror = { version = "2.0.0", default-features = false }
anyhow = { version = "1.0", default-features = false }
once_cell = { version = "1.21", default-features = false }
rkyv = "0.8.10"

ethereum_ssz_derive = "0.9"
ethereum_ssz = "0.9"

k256 = { version = "0.13", default-features = false, features = [
    "ecdsa",
    "serde",
    "pem",
] }
sparsestate = { git = "https://github.com/eth-act/zkvm-ethereum-mpt.git", tag = "v0.4.0" }

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[profile.release.package.reth-airbender-stateless-validator]
opt-level = "s"

[patch.crates-io]