[package]
name = "guest-loader"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
minisign-verify = "0.2"
reqwest = { workspace = true }
tokio = { workspace = true }
zkboost-server-config = { workspace = true }

[lints]
workspace = true
